--- a/package.json
+++ b/package.json
@@ -4,13 +4,30 @@
   "description": "social platform to share your progress with people on similar journeys",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec ts-node src/app.ts",
+    "migrate:make": "npx knex migrate:make -x ts --knexfile .src/db/knexfile.ts",
+    "migrate:latest": "npx knex migrate:latest --knexfile ./src/db/knexfile.ts",
+    "migrate:rollback": "npx knex migrate:rollback --knexfile ./src/db/knexfile.ts"
   },
   "author": "Aanchal Adhikari",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.1.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
+    "nodemon": "^2.0.18",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
