--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ts-node src/app.ts",
-    "migrate:make": "npx knex migrate:make -x ts --knexfile .src/db/knexfile.ts",
+    "migrate:make": "npx knex migrate:make -x ts --knexfile ./src/db/knexfile.ts",
     "migrate:latest": "npx knex migrate:latest --knexfile ./src/db/knexfile.ts",
     "migrate:rollback": "npx knex migrate:rollback --knexfile ./src/db/knexfile.ts"
   },
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.3",
